--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -10,6 +10,7 @@ $breakpoints: (
 
 $font: Verdana, 'Verdana', Arial, sans-serif;
 $font-head: 'Exo', Arial, sans-serif;
+$font-icons: 'icomoon' !important;
 
 $container_width: 1640px;
 
