--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,8 @@
 @import 'vendors/flickity';
 @import 'vendors/lv-ripple';
 @import 'vendors/nice-select';
+@import 'vendors/ion.rangeSlider';
+@import 'vendors/ion.rangeSlider.skin';
 
 @import 'base/reset';
 @import 'base/fonts';
