--- a/sass/modules/_preview.scss
+++ b/sass/modules/_preview.scss
@@ -70,6 +70,15 @@
 		a{
 			@extend %link-blue-hover;
 		}
+		@include res(xxs){
+			font-size: 14px;
+		}
+	}
+
+	.small-text{
+		@include res(xxs){
+			font-size: 10px;
+		}
 	}
 
 	&__footer{
