--- a/sass/modules/_buttons.scss
+++ b/sass/modules/_buttons.scss
@@ -18,6 +18,7 @@
 	border: none;
 	border-radius: 25px;
 	box-shadow: 0 3px 8px -3px rgba(0, 0, 0, 0);
+	-webkit-tap-highlight-color: transparent;
 
 	&:hover,&:focus{
 		outline: none;
@@ -28,6 +29,24 @@
 	&:active{
 		background: darken($gray-bg,10%);
 		box-shadow: 0 3px 8px -3px rgba(0, 0, 0, 0.5);
+	}
+
+	i{
+		&.i-down{
+			display: inline-block;
+			position: relative;
+			margin-left: $pad-xxs;
+			top: -0.1em;
+			font-size: 8px;
+			transform-origin: 50% 45%;
+			transition: transform 0.3s ease;
+		}
+	}
+	
+	&.active{
+		i.i-down{
+			transform: rotate(-180deg);
+		}
 	}
 }
 
