--- a/sass/pages/_catalog.scss
+++ b/sass/pages/_catalog.scss
@@ -112,7 +112,7 @@
 		border-radius: 0;
 		overflow: auto;
 		width: 240px;
-		padding: $pad-m 0 $pad-xxs 0;
+		padding: $pad-l 0 $pad-xxs 0;
 		-webkit-overflow-scrolling: touch;
 		box-shadow: 5px 0 20px 0 rgba(0,0,0,0.15);
 		transform: translate3d(-250px,0,0);
@@ -304,13 +304,14 @@
 	.filter-block-close{
 		@include cross();
 		position: fixed;
-		left: 224px;
-		top: 10px;
-		right: initial;
-		z-index: 31;
-		transform: translate3d(-280px,0,0);
+		left: 224px !important;
+		top: 50px !important;
+		right: initial !important;
+		z-index: 7;
+		transform: translate3d(0,-50px,0);
 		visibility: hidden;
 		opacity: 0;
+		-webkit-tap-highlight-color: transparent;
 
 		&.visible{
 			transform: none;
