--- a/sass/modules/_printer-cart.scss
+++ b/sass/modules/_printer-cart.scss
@@ -34,8 +34,10 @@
 	font-size: 16px;
 	font-weight: bold;
 	transition: all 0.3s ease;
+	line-height: 1.2;
+	overflow: hidden;
 	@include res(xxl) {
-		font-size: 15px;
+		font-size: 14px;
 	}
 	@include res(s) {
 		font-size: 14px;
@@ -54,7 +56,7 @@
 	border-radius: 20px;
 	background: #fff;
 	@include res(xxl) {
-		font-size: 16px;
+		font-size: 14px;
 	}
 	@include res(xxs){
 		font-size: 12px;
