--- a/sass/modules/_product-preview.scss
+++ b/sass/modules/_product-preview.scss
@@ -12,7 +12,6 @@
 
 .product-preview{
 	position: relative;
-	//padding: 1px;
 	transition: all 0.3s ease;
 	box-shadow: 0 0 0 1px $gray-border;
 	border-radius: 15px;
@@ -59,17 +58,24 @@
 	header{
 		position: relative;
 		padding: $pad-xxs $pad-xxs 0 $pad-xxs;
+		text-align: center;
 
 		a{
 			display: block;
-			flex-shrink: 1;
-			//height: 100%;
+			position: relative;
+			height: 0;
+			padding-bottom: 75%;
 		}
 
 		img{
-			display: block;
-			flex-shrink: 1;
-			width: 100%;
+			position: absolute;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			top: 0;
+			margin: auto;
+			max-width: 100%;
+			max-height: 100%;
 			height: auto;
 		}
 
