--- a/sass/main.scss
+++ b/sass/main.scss
@@ -29,6 +29,8 @@
 @import 'modules/footer';
 @import 'modules/page-title';
 @import 'modules/pagination';
+@import 'modules/sliders';
 
 @import 'pages/home';
 @import 'pages/catalog';
+@import 'pages/catalog-detail';
