detail product top ready

--- a/sass/modules/_modals.scss
+++ b/sass/modules/_modals.scss
@@ -41,6 +41,12 @@
 			}
 		}
 	}
+
+	&__btns{
+		margin-top: $pad-xs;
+		display: flex;
+		justify-content: space-between;
+	}
 }
 
 .fancybox-slide--current {
