--- a/sass/modules/_buttons.scss
+++ b/sass/modules/_buttons.scss
@@ -19,6 +19,10 @@
 	border-radius: 25px;
 	box-shadow: 0 3px 8px -3px rgba(0, 0, 0, 0);
 	-webkit-tap-highlight-color: transparent;
+	@include res(xs){
+		font-size: 12px;
+		padding: 10px 14px;
+	}
 
 	&:hover,&:focus{
 		outline: none;
@@ -96,6 +100,10 @@ button::-moz-focus-inner {
 	width: 40px;
 	height: 40px;
 	padding: 0;
+	@include res(xs){
+		width: 35px;
+		height: 35px;
+	}
 
 	i{
 		display: block;
