--- a/sass/modules/_product-preview.scss
+++ b/sass/modules/_product-preview.scss
@@ -15,12 +15,12 @@
 	transition: all 0.3s ease;
 	box-shadow: 0 0 0 1px $gray-border;
 	border-radius: 15px;
+	background: #FFF;
 
 	&:hover{
 		transform: translate3d(0,-20px,0);
 		box-shadow: 0 0 0 1px transparent;
-		z-index: 2;
-		background: #FFF;
+		z-index: 3;
 		@include res(l){
 			transform: none;
 		}
@@ -129,23 +129,13 @@
 		.btn--red{
 			width: 100%;
 			flex-shrink: 1;
-			padding-left: 10px;
-			padding-right: 10px;
-			@include res(xxl){
-				font-size: 14px;
-			}
-			@include res(xxs){
-				font-size: 12px;
-			}
+			padding-left: 5px;
+			padding-right: 5px;
 		}
 
 		.btn--round{
 			flex-shrink: 0;
 			margin-left: $pad-xxs;
-			@include res(xxs){
-				width: 35px;
-				height: 35px;
-			}
 		}
 	}
 
@@ -198,6 +188,64 @@
 		}
 	}
 }
+
+
+//mini
+.product-preview--mini{
+
+	header{
+		@include res(xs){
+			padding: 5px 5px 0 5px;
+		}
+	}
+
+	main{
+		@include res(xs){
+			padding: 5px 5px 5px;
+		}
+	}
+
+	.product-preview__title{
+		font-size: 11px;
+		height: auto;
+		margin-bottom: 15px;
+	}
+
+	.product-preview__price{
+		font-size: 16px;
+		@include res(xs){
+			font-size: 13px;
+		}
+	}
+
+	footer{
+		.btn--red{
+			font-size: 11px;
+		}
+	}
+
+	&:hover{
+		transform: translate3d(0,-10px,0);
+		@include res(l){
+			transform: none;
+		}
+
+		&:before{
+			height: calc(100% + 30px + #{$pad-xs});
+			@include res(l){
+				height: 100%;
+			}
+		}
+
+		footer{
+			visibility: visible;
+			transform: none;
+			opacity: 1;
+		}
+	}
+
+}
+//mini
 
 
 
