--- a/sass/pages/_catalog-detail.scss
+++ b/sass/pages/_catalog-detail.scss
@@ -319,6 +319,10 @@
 			margin-right: 3%;
 			margin-bottom: 10px;
 		}
+		@include res(xs){
+			width: 100%;
+			margin-right: 0;
+		}
 
 		&:after{
 			content: '+';
