Part of Product page

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -30,6 +30,8 @@
 @import 'modules/page-title';
 @import 'modules/pagination';
 @import 'modules/sliders';
+@import 'modules/detail-info';
+@import 'modules/d-review';
 
 @import 'pages/home';
 @import 'pages/catalog';
