--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -62,15 +62,41 @@ h3, .h3 {
 	@include res(l) {
 		font-size: 12px;
 	}
-	p, ul, ol, li ,table, img{
+	p, ul, ol, table, img{
 		position: relative;
 		margin-bottom: 20px;
+		@include res(l) {
+			margin-bottom: 15px;
+		}
 		&:last-child {
 			margin-bottom: 0;
 		}
 	}
+	ul {
+		list-style: none;
+		li {
+			position: relative;
+			padding-left: $pad-s;
+			padding-bottom: 2px;
+			&:before {
+				content: '';
+				position: absolute;
+				top: 6px;
+				left: 0;
+				width: 0;
+				height: 0;
+				border-style: solid;
+				border-width: 4px 0 4px 8px;
+				border-color: transparent transparent transparent #000000;
+				@include res(l) {
+					top: 4px;
+				}
+			}
+		}
+	}
 	&--mini {
 		font-size: 12px;
+		line-height: 1.8;
 		@include res(l) {
 			font-size: 10px;
 		}
