--- a/sass/pages/_catalog.scss
+++ b/sass/pages/_catalog.scss
@@ -194,6 +194,7 @@
 	}
 
 	.style-checkbox{
+
 		margin-bottom: $pad-xxs;
 
 		&:last-child{
@@ -329,3 +330,10 @@
 	}
 }
 //s-catalog-mob-btns
+
+
+//cat-description
+.catalog-description{
+	margin-top: 35px;
+}
+//cat-description
