--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -62,6 +62,11 @@ h3, .h3 {
 	@include res(l) {
 		font-size: 12px;
 	}
+
+	h1,.h1,h2,.h2,h3,.h3,h4,.h4,h5,.h5{
+		margin-bottom: 10px;
+	}
+
 	p, ul, ol, table, img{
 		position: relative;
 		margin-bottom: 20px;
@@ -72,6 +77,7 @@ h3, .h3 {
 			margin-bottom: 0;
 		}
 	}
+
 	a {
 		color: $blue;
 		transition: all 0.3s ease;
@@ -79,6 +85,7 @@ h3, .h3 {
 			color: $red;
 		}
 	}
+
 	ul {
 		list-style: none;
 		li {
@@ -101,6 +108,19 @@ h3, .h3 {
 			}
 		}
 	}
+
+	table{
+		border-collapse: collapse;
+
+		td{
+			border: 1px solid $gray-border;
+			padding: $pad-xxs;
+			@include res(s){
+				padding: 6px;
+			}
+		}
+	}
+
 	&--mini {
 		font-size: 12px;
 		line-height: 1.8;
