--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,6 +21,7 @@
 @import 'modules/modals';
 @import 'modules/header';
 @import 'modules/printer-cart';
+@import 'modules/bottom-cat';
 @import 'modules/mobile-menu';
 @import 'modules/section-title';
 @import 'modules/product-preview';
