--- a/sass/modules/_bottom-cat.scss
+++ b/sass/modules/_bottom-cat.scss
@@ -60,12 +60,22 @@
 		display: block;
 		padding-top: 2px;
 		padding-bottom: 2px;
+		padding-left: 5px;
 		transition: all 0.3s ease;
+		font-size: 12px;
+		line-height: 1.2;
+		margin-bottom: 4px;
 		&:hover {
 			color: $blue;
 		}
 		&.active {
 			color: $blue;
+		}
+
+		&.h3{
+			@extend .h3;
+			padding-left: 0;
+			line-height: 1;
 		}
 	}
 }
