--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -64,7 +64,7 @@ h3, .h3 {
 	}
 
 	h1,.h1,h2,.h2,h3,.h3,h4,.h4,h5,.h5{
-		margin-bottom: 10px;
+		margin-bottom: 15px;
 	}
 
 	p, ul, ol, table, img{
@@ -111,6 +111,10 @@ h3, .h3 {
 
 	table{
 		border-collapse: collapse;
+
+		tr:nth-child(2n){
+			background: $gray-bg;
+		}
 
 		td{
 			border: 1px solid $gray-border;
