--- a/sass/modules/_forms.scss
+++ b/sass/modules/_forms.scss
@@ -9,9 +9,9 @@ button {
 
 .input-text {
 	display: inline-block;
-	padding: 15px 25px;
+	padding: 14px 25px;
 	font-family: $font;
-	font-size: 14px;
+	font-size: 16px;
 	line-height: 1.3;
 	border: 1px solid #dbdbde;
 	overflow: visible;
@@ -20,9 +20,6 @@ button {
 	background: #FFF;
 	transition: all 0.3s ease;
 	box-shadow: 0 3px 8px -3px rgba(0, 0, 0, 0);
-	@include res(l){
-		font-size: 16px;
-	}
 
 	@include placeholder {
 		font-size: 14px;
@@ -54,15 +51,12 @@ button {
 	}
 
 	&--search {
-		padding: 10px 20px;
+		padding: 9px 20px;
 		border-color: #959595;
 		border-radius: 25px;
 		font-style: italic;
 		@include placeholder {
 			font-style: italic;
-		}
-		@include res(s) {
-			padding: 8px 18px;
 		}
 	}
 }
@@ -76,17 +70,28 @@ button {
 	}
 	button {
 		position: absolute;
-		top: 51%;
+		top: 0;
 		right: 0;
-		padding: 5px 15px;
+		height: 100%;
+		padding: 0;
+		width: 50px;
 		font-size: 22px;
 		color: #3c4855;
 		background: none;
 		transition: all 0.3s ease;
-		transform: translate3d(0,-50%,0);
 		z-index: 1;
 		&:hover {
 			color: $blue;
+		}
+		&:focus{
+			outline: none;
+			color: $blue;
+		}
+
+		i{
+			position: relative;
+			display: block;
+			margin-top: -0.1em;
 		}
 	}
 }
