--- a/sass/pages/_catalog.scss
+++ b/sass/pages/_catalog.scss
@@ -9,7 +9,7 @@
 			height: 100%;
 			background: linear-gradient(to right,transparent,#FFF 50%);
 			position: absolute;
-			right: -14px;
+			right: 0;
 			top: 0;
 			z-index: 2;
 			display: none;
