--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -22,6 +22,7 @@ $blue: #2f7bff;
 $gray-bg: #f0f0f7;
 $gray-border: #ebebeb;
 $gray-text: #b4b4b4;
+$orange: #f95a0e;
 
 $pad-xxl: 100px;
 $pad-xl: 70px;
