--- a/sass/main.scss
+++ b/sass/main.scss
@@ -33,6 +33,7 @@
 @import 'modules/sliders';
 @import 'modules/detail-info';
 @import 'modules/d-review';
+@import 'modules/user-cart';
 
 @import 'pages/home';
 @import 'pages/catalog';
