--- a/sass/modules/_user-cart.scss
+++ b/sass/modules/_user-cart.scss
@@ -293,6 +293,8 @@ a.user-cart__item-value {
 	input {
 		width: 100%;
 		max-width: 310px;
+		font-size: 12px;
+		padding-left: 15px;
 	}
 	.btn {
 		position: absolute;
