--- a/sass/pages/_lk-login.scss
+++ b/sass/pages/_lk-login.scss
@@ -39,6 +39,12 @@
 		@extend %link-blue;
 		border-bottom: 1px dotted currentColor;
 	}
+
+	&__pass-sep{
+		padding-top: $pad-xs;
+		text-align: center;
+		margin-bottom: $pad-xs;
+	}
 }
 
 .auth-descr-block{
