--- a/sass/pages/_user-cart.scss
+++ b/sass/pages/_user-cart.scss
@@ -242,7 +242,7 @@ a.user-cart__item-value {
 		font-size: 16px;
 	}
 	&:hover {
-		box-shadow: 0 0 5px 0 transparentize($red, 0.5);
+		box-shadow: 0 2px 6px -2px rgba(255, 0, 0, 0.5);
 		i {
 			color: $red;
 		}
