cat root,brands,brand-detail

--- a/sass/pages/_catalog-root.scss
+++ b/sass/pages/_catalog-root.scss
@@ -10,6 +10,9 @@
 		display: block;
 		margin-bottom: 12px;
 		line-height: 1.2;
+		@include res(xs){
+			font-size: 10px;
+		}
 
 		a{
 			@extend %link-blue-hover;
