--- a/sass/modules/_forms.scss
+++ b/sass/modules/_forms.scss
@@ -19,7 +19,7 @@ button {
 	border-radius: 25px;
 	background: #FFF;
 	transition: all 0.3s ease;
-	box-shadow: 0 0 20px 0 transparentize($blue,1);
+	box-shadow: 0 4px 10px -2px transparentize($blue,1);
 	@include res(xs){
 		font-size: 14px;
 		padding: 10px 20px;
@@ -39,7 +39,7 @@ button {
 	&:focus{
 		outline: none;
 		border: 1px solid $blue;
-		box-shadow: 0 0 20px 0 transparentize($blue,0.7);
+		box-shadow: 0 4px 10px -2px transparentize($blue,0.8);
 		@include placeholder {
 			opacity: 0;
 		}
@@ -48,7 +48,7 @@ button {
 	&.error{
 		border: 1px solid $orange;
 		background: lighten($orange,40%);
-		box-shadow: 0 0 20px 0 rgba(255, 35, 0, 0.3);
+		box-shadow: 0 4px 10px -2px rgba(255, 35, 0, 0.2);
 	}
 
 	&--search {
@@ -294,7 +294,7 @@ button {
 //error-block
 .error-block{
 	background: linear-gradient(to right,#f34d4d,#ff8025);
-	box-shadow: 0 0 30px 0 rgba(255, 35, 0, 0.6);
+	box-shadow: 0 4px 10px -2px rgba(255, 35, 0, 0.6);
 	color: #ffffff;
 	border-radius: 6px;
 	margin-bottom: 15px;
