--- a/sass/main.scss
+++ b/sass/main.scss
@@ -34,6 +34,7 @@
 @import 'modules/detail-info';
 @import 'modules/d-review';
 @import 'modules/tabs';
+@import 'modules/share-block';
 
 @import 'pages/home';
 @import 'pages/catalog';
@@ -44,3 +45,4 @@
 @import 'pages/catalog-root';
 @import 'pages/brands';
 @import 'pages/404';
+@import 'pages/news';
