Compare Page, Map Page

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -34,6 +34,7 @@
 @import 'modules/detail-info';
 @import 'modules/d-review';
 @import 'modules/tabs';
+@import 'modules/user-compare';
 @import 'modules/share-block';
 
 @import 'pages/home';
