--- a/sass/modules/_product-preview.scss
+++ b/sass/modules/_product-preview.scss
@@ -187,6 +187,26 @@
 	}
 }
 
+.product-preview--compare {
+	&:hover {
+		transform: none;
+		&:before {
+			height: 100%;
+		}
+	}
+	footer {
+		position: relative;
+		visibility: visible;
+		opacity: 1;
+		padding: 0 $pad-xxs $pad-xxs $pad-xxs;
+		.btn--round {
+			i {
+				font-size: 24px;
+			}
+		}
+	}
+}
+
 
 //mini
 .product-preview--mini{
