--- a/sass/modules/_forms.scss
+++ b/sass/modules/_forms.scss
@@ -306,6 +306,7 @@ button {
 
 //pass-wrap
 .pass-wrap{
+	display: block;
 	position: relative;
 
 	input{
@@ -313,16 +314,17 @@ button {
 	}
 
 	i{
-		display: block;
+		display: flex;
+		align-items: center;
+		justify-content: center;
 		position: absolute;
 		z-index: 2;
 		top: 0;
 		right: 0;
 		color: $gray-border;
 		width: 50px;
-		height: 100%;
-		text-align: center;
-		font-size: 20px;
+		height: 50px;
+		font-size: 18px;
 		transition: color 0.3s ease;
 
 		&:hover{
