--- a/sass/modules/_mobile-menu.scss
+++ b/sass/modules/_mobile-menu.scss
@@ -92,9 +92,9 @@
 		list-style: none;
 	}
 	li {
+		margin: 0 10px 10px 0;
 		a {
 			display: block;
-			padding-right: 10px;
 			font-size: 12px;
 		}
 	}
