--- a/sass/modules/_footer.scss
+++ b/sass/modules/_footer.scss
@@ -282,3 +282,64 @@
 		
 	}
 }
+
+
+.to-top-btn{
+	position: fixed;
+	bottom: 10px;
+	right: 10px;
+	z-index: 50;
+	background: #b6bfd3;
+	border-radius: 50%;
+	width: 54px;
+	height: 54px;
+	color: #FFF;
+	padding: 0;
+	transition: all 0.3s ease;
+	opacity: 0;
+	visibility: hidden;
+	transform: translate3d(30px,30px,0);
+	@include res(xxl){
+		width: 48px;
+		height: 48px;
+		font-size: 14px;
+	}
+	@include res(s){
+		width: 34px;
+		height: 34px;
+		font-size: 10px;
+		bottom: 5px;
+		right: 5px;
+	}
+
+	&:hover,&:focus{
+		background: darken(#b6bfd3,10%);
+	}
+	
+	i{
+		position: relative;
+		display: block;
+		transform: rotate(90deg);
+		line-height: 54px;
+		@include res(xxl){
+			line-height: 48px;
+		}
+		@include res(s){
+			line-height: 34px;
+		}
+	}
+
+	&.visible{
+		opacity: 1;
+		visibility: visible;
+		transform: translate3d(0,0,0);
+	}
+
+	&.ended{
+		transform: translate3d(40px,40px,0);
+
+		&:hover{
+			transform: translate3d(20px,20px,0);
+		}
+	}
+}
