--- a/sass/modules/_printer-cart.scss
+++ b/sass/modules/_printer-cart.scss
@@ -55,6 +55,7 @@
 	padding: 3px 14px;
 	font-size: 18px;
 	font-family: $font-head;
+	font-weight: bold;
 	color: $blue;
 	white-space: nowrap;
 	border-radius: 20px;
