--- a/sass/modules/_product-preview.scss
+++ b/sass/modules/_product-preview.scss
@@ -158,6 +158,7 @@
 		display: block;
 		position: relative;
 		font-family: $font-head;
+		font-weight: bold;
 		font-size: 24px;
 		line-height: 1;
 		@include res(xxl){
@@ -248,6 +249,7 @@
 	}
 
 	.product-preview__price{
+		font-weight: bold;
 		font-size: 16px;
 		@include res(xs){
 			font-size: 16px;
