--- a/sass/pages/_news.scss
+++ b/sass/pages/_news.scss
@@ -12,6 +12,16 @@
 	.user-content{
 		max-width: 1030px;
 	}
+
+	&--video{
+		background: $gray-bg;
+		padding: $pad-l 0;
+		margin-bottom: $pad-m;
+		@include res(s){
+			padding: $pad-m 0;
+			margin-bottom: $pad-s;
+		}
+	}
 }
 
 
