--- a/sass/modules/_modals.scss
+++ b/sass/modules/_modals.scss
@@ -1,32 +1,34 @@
 .modal{
 	display: none;
-	width: 420px;
+	width: 370px;
 	max-width: 100%;
 	will-change: transform,opacity;
 	overflow: visible !important;
-	padding: 0;
+	padding: $pad-s $pad-m;
 	border-radius: 15px;
-	background: #FFF;
+	background: url("../img/pattern-gray-modal.png") center top $gray-bg;
 	box-shadow: 0 0 30px 0 rgba(19, 47, 141, 0.15);
 	transform: translate3d(0,-20px,0);
 	opacity: 0;
 	transition: all 0.4s ease;
-
-	&__header{
-		position: relative;
-		z-index: 2;
-		padding: $pad-xs $pad-l $pad-xs $pad-s;
-		background: $gray-bg;
-		border-radius: 15px 15px 0 0;
+	@include res(s){
+		padding: $pad-s $pad-xs;
 	}
 
-	&__content{
-		position: relative;
-		z-index: 2;
-		padding: $pad-xs $pad-s;
+	&__icon{
+		text-align: center;
+		margin-bottom: 4px;
+	}
+
+	&__title{
+		text-align: center;
+		margin-bottom: $pad-xs;
+		padding: 0 $pad-s;
 	}
 
 	&__descr{
+		font-size: 12px;
+		text-align: center;
 		margin-bottom: $pad-xs;
 	}
 
