--- a/sass/modules/_product-preview.scss
+++ b/sass/modules/_product-preview.scss
@@ -60,7 +60,7 @@
 		padding: $pad-xxs $pad-xxs 0 $pad-xxs;
 		text-align: center;
 
-		a{
+		a,figure{
 			display: block;
 			position: relative;
 			height: 0;
