--- a/sass/main.scss
+++ b/sass/main.scss
@@ -36,6 +36,9 @@
 @import 'modules/tabs';
 @import 'modules/user-compare';
 @import 'modules/share-block';
+@import 'modules/mails';
+@import 'modules/reviews';
+@import 'modules/feedback';
 
 @import 'pages/home';
 @import 'pages/catalog';
